k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kcna-learn
  labels:
    name: kcna-learn
    app: kcna-learn
